fix modal disappearing on smaller screens

--- a/react-bubblegram/src/styles/Modal.css
+++ b/react-bubblegram/src/styles/Modal.css
@@ -2,7 +2,7 @@
   transform: translate(-50%, -50%) scale(0);
   position: fixed;
   top: 50vh;
-  left: 50%;
+  left: 50vw;
   transition: 200ms ease-in-out;
   border-radius: 20%;
   z-index: 10;
@@ -13,10 +13,11 @@
 }
 
 .modal-active {
+
   transform: translate(-50%, -50%) scale(1);
   position: fixed;
   top: 50vh;
-  left: 50%;
+  left: 50vw;
   transition: 200ms ease-in-out;
   border-radius: 20%;
   z-index: 10;
@@ -42,6 +43,7 @@
 
 #overlay {
   position: fixed;
+  max-width:100%;
   opacity: 0;
   transition: 200ms ease-in-out;
   top: 0;
@@ -55,6 +57,7 @@
 
 #overlay-active {
   opacity: .5;
+  max-width:100%;
   pointer-events: all;
   position: fixed;
   transition: 200ms ease-in-out;
